WindGroup Dev/src/objects/Data_Dictionary__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Field_Value__c</fullName>
        <label>Field Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field__c</fullName>
        <label>Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System__c</fullName>
        <label>System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Data Dictionary</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{YYYY}-{MM}-DD-{000000}</displayFormat>
        <label>Data Dictionary No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Data Dictionary</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>